Lots of formatting updates.

--- a/specs/source/vocabs/commerce.html
+++ b/specs/source/vocabs/commerce.html
@@ -85,9 +85,9 @@
     <section>
       <h2>Classes</h2>
 
-      <section id="Deposit">
-        <h3 about="http://purl.org/commerce#Deposit"
-            typeof="owl:Class">Deposit (REMOVED - but should not be)</h3>
+      <section id="Deposit" about="http://purl.org/commerce#Deposit"
+        typeof="owl:Class">
+        <h3>Deposit (REMOVED - but should not be)</h3>
           <p>
 A transfer of funds from a source account into a destination account typically
 performed as a means for storing monetary amounts in the destination account.
@@ -145,9 +145,9 @@ The following example describes a credit card deposit:
 </p>
       </section>
 
-      <section id="DepositSignature">
-        <h3 about="http://purl.org/commerce#DepositSignature"
-            typeof="owl:Class">DepositSignature</h3>
+      <section id="DepositSignature" about="http://purl.org/commerce#DepositSignature"
+        typeof="owl:Class">
+        <h3>DepositSignature</h3>
           <p>
 A signature verifying the details of a <a href="#Deposit">Deposit</a>.
           </p>
@@ -169,9 +169,9 @@ A signature verifying the details of a <a href="#Deposit">Deposit</a>.
 </pre>
       </section>
 
-      <section id="Payee">
-        <h3 about="http://purl.org/commerce#Payee"
-            typeof="owl:Class">Payee</h3>
+      <section id="Payee" about="http://purl.org/commerce#Payee"
+        typeof="owl:Class">
+        <h3>Payee</h3>
           <p>
 An entity, including a destination account, that receives monetary funds 
 during a <a href="#Transaction">Transaction</a>.
@@ -200,9 +200,9 @@ The following example expresses a flat payment of $0.05 USD.
 </pre>
       </section>
 
-      <section id="PayeeRule">
-        <h3 about="http://purl.org/commerce#PayeeRule"
-            typeof="owl:Class">PayeeRule (REMOVED - but should not be)</h3>
+      <section id="PayeeRule" about="http://purl.org/commerce#PayeeRule"
+        typeof="owl:Class">
+        <h3>PayeeRule (REMOVED - but should not be)</h3>
           <p>
 A Payee Rule is a mechanism that can describe limits and allowances on the 
 payees during a transaction. These rules are typically used to apply 
@@ -256,9 +256,9 @@ added to the list of payees for a transaction.
           </pre>
       </section>
 
-      <section id="Transfer">
-        <h3 about="http://purl.org/commerce#Transfer"
-            typeof="owl:Class">Transfer (was ps:Transfer)</h3>
+      <section id="Transfer" about="http://purl.org/commerce#Transfer"
+        typeof="owl:Class">
+        <h3>Transfer (was ps:Transfer)</h3>
           <p>
 A record of the movement of monetary funds from a source account into a
 destination account.
@@ -289,9 +289,9 @@ local financial account to an external financial account.
           </pre>
       </section>
 
-      <section id="Transaction">
-        <h3 about="http://purl.org/commerce#Transaction"
-            typeof="owl:Class">Transaction (was ps:Transaction)</h3>
+      <section id="Transaction" about="http://purl.org/commerce#Transaction"
+        typeof="owl:Class">
+        <h3>Transaction (was ps:Transaction)</h3>
           <p>
 A record of a commercial exchange between two entities resulting in the 
 transfer of monetary funds from one or more source accounts to 
@@ -325,9 +325,9 @@ to a tax account.
           </pre>
       </section>
 
-      <section id="Withdrawal">
-        <h3 about="http://purl.org/commerce#Withdrawal"
-            typeof="rdfs:Class">Withdrawal (was ps:Withdrawal)</h3>
+      <section id="Withdrawal" about="http://purl.org/commerce#Withdrawal"
+        typeof="rdfs:Class">
+        <h3>Withdrawal (was ps:Withdrawal)</h3>
           <p>
 A transfer of funds from a source account into a destination account typically
 performed as a means for retrieving previously stored monetary amounts.
@@ -363,149 +363,143 @@ into a more traditional offline account.
     <section>
       <h2>Constants</h2>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">Cumulative</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>Cumulative</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">Deferred</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>Deferred</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">ExclusivePercentage</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>ExclusivePercentage</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">FlatAmount</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>FlatAmount</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">FlatRate  (REMOVED)</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>FlatRate  (REMOVED)</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">InclusivePercentage</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>InclusivePercentage</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">Tax</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>Tax</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">TaxExempt</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>TaxExempt</h3>
       </section>
     </section>
 
     <section>
       <h2>Properties</h2>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">amount</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>amount</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">currency</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>currency</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">date</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>date</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">destination</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>destination</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">destinationOwnerType (REMOVED)</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>destinationOwnerType (REMOVED, but should not be)</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">maximumRate (REMOVED)</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>maximumRate (REMOVED, but should not be)</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">gateway (ADDED)</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>forTransaction (was ps:forTransaction)</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">forTransaction (was ps:forTransaction)</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>limitation (REMOVED, but should not be,  was ps:limitation)</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">limitation (REMOVED was ps:limitation)</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>minimumAmount (ADDED)</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">minimumAmount (ADDED)</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>percentage (REMOVED, was: ps:percentage)</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">percentage (REMOVED, was: ps:percentage)
-</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>payeePosition (ADDED, was: ps:payeePosition)</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">payeePosition (ADDED, was: ps:payeePosition)</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>transfer (REMOVED, but should not be, was ps:transfer)</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">transfer (REMOVED, was ps:transfer)</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>payee (was ps:payee)</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">payee (was ps:payee)</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>rate</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">rate</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>rateContext</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">rateContext</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>rateType</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">rateType</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>source</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">source</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>total (ADDED, duplicates com:amount, should be removed?)</h3>
       </section>
 
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">total (ADDED)</h3>
-      </section>
-
-      <section>
-        <h3 id="" about="http://purl.org/commerce#"
-            typeof="owl:">transfer</h3>
+      <section id="" about="http://purl.org/commerce#"
+        typeof="owl:">
+        <h3>transfer</h3>
       </section>
     </section>
 
