--- a/specs/source/vocabs/signature.html
+++ b/specs/source/vocabs/signature.html
@@ -85,30 +85,58 @@
 
     <section>
       <h2>Classes</h2>
-
-com:Signature (was ps:Signature)
-com:SignatureType (was ps:SignatureType)
-com:StandardSignature (was ps:StandardSignature)
-
+      <section id="" about="http://purl.org/signature#"
+        typeof="owl:">
+        <h3>Signature (was ps:Signature)</h3>
+      </section>
+      <section id="" about="http://purl.org/signature#"
+        typeof="owl:">
+        <h3>SignatureType (was ps:SignatureType)</h3>
+      </section>
+      <section id="" about="http://purl.org/signature#"
+        typeof="owl:">
+        <h3>StandardSignature (was ps:StandardSignature)
+      </section>
     </section>
 
     <section>
       <h2>Constants</h2>
-
     </section>
 
     <section>
       <h2>Properties</h2>
-sig:signature (was ps:signature)
-sig:signatureFor (was ps:signatureFor)
-sig:signer (was ps:signer)
-sig:signatureValue (was ps:signatureValue)
-
--ps:signatureAlgorithm
--ps:signatureHashAlgorithm
--ps:signatureSerializationAlgorithm
-+ps:signedFor
-
+      <section id="" about="http://purl.org/signature#"
+        typeof="owl:">
+        <h3>signature (was ps:signature)</h3>
+      </section>
+      <section id="" about="http://purl.org/signature#"
+        typeof="owl:">
+        <h3>signatureFor (was ps:signatureFor)</h3>
+      </section>
+      <section id="" about="http://purl.org/signature#"
+        typeof="owl:">
+        <h3>signer (was ps:signer)</h3>
+      </section>
+      <section id="" about="http://purl.org/signature#"
+        typeof="owl:">
+        <h3>signatureValue (was ps:signatureValue)</h3>
+      </section>
+      <section id="" about="http://purl.org/signature#"
+        typeof="owl:">
+        <h3>signatureAlgorithm (REMOVED, was ps:signatureAlgorithm)</h3>
+      </section>
+      <section id="" about="http://purl.org/signature#"
+        typeof="owl:">
+        <h3>signatureHashAlgorithm (REMOVED, was ps:signatureHashAlgorithm)</h3>
+      </section>
+      <section id="" about="http://purl.org/signature#"
+        typeof="owl:">
+        <h3>signatureSerializationAlgorithm (REMOVED, was ps:signatureSerializationAlgorithm)</h3>
+      </section>
+      <section id="" about="http://purl.org/signature#"
+        typeof="owl:">
+        <h3>signedFor (ADDED)
+      </section>
     </section>
 
   </body> 
