Added more review comments in preparation for cleanup tomorrow.

--- a/specs/source/vocabs/commerce.html
+++ b/specs/source/vocabs/commerce.html
@@ -87,7 +87,7 @@
 
       <section id="Deposit" about="http://purl.org/commerce#Deposit"
         typeof="owl:Class">
-        <h3>Deposit (REMOVED - but should not be)</h3>
+        <h3>Deposit (NOT IMPLEMENTED, but should be)</h3>
           <p>
 A transfer of funds from a source account into a destination account typically
 performed as a means for storing monetary amounts in the destination account.
@@ -202,7 +202,7 @@ The following example expresses a flat payment of $0.05 USD.
 
       <section id="PayeeRule" about="http://purl.org/commerce#PayeeRule"
         typeof="owl:Class">
-        <h3>PayeeRule (REMOVED - but should not be)</h3>
+        <h3>PayeeRule (NOT IMPLEMENTED, but should be)</h3>
           <p>
 A Payee Rule is a mechanism that can describe limits and allowances on the 
 payees during a transaction. These rules are typically used to apply 
@@ -385,7 +385,7 @@ into a more traditional offline account.
 
       <section id="" about="http://purl.org/commerce#"
         typeof="owl:">
-        <h3>FlatRate  (REMOVED)</h3>
+        <h3>FlatRate  (NOT IMPLEMENTED, duplicates FlatAmount)</h3>
       </section>
 
       <section id="" about="http://purl.org/commerce#"
@@ -429,12 +429,12 @@ into a more traditional offline account.
 
       <section id="" about="http://purl.org/commerce#"
         typeof="owl:">
-        <h3>destinationOwnerType (REMOVED, but should not be)</h3>
+        <h3>destinationOwnerType (NOT IMPLEMENTED, but should be)</h3>
       </section>
 
       <section id="" about="http://purl.org/commerce#"
         typeof="owl:">
-        <h3>maximumRate (REMOVED, but should not be)</h3>
+        <h3>maximumRate (NOT IMPLEMENTED, but should be)</h3>
       </section>
 
       <section id="" about="http://purl.org/commerce#"
@@ -444,7 +444,7 @@ into a more traditional offline account.
 
       <section id="" about="http://purl.org/commerce#"
         typeof="owl:">
-        <h3>limitation (REMOVED, but should not be,  was ps:limitation)</h3>
+        <h3>limitation (NOT IMPLEMENTED, but should be,  was ps:limitation)</h3>
       </section>
 
       <section id="" about="http://purl.org/commerce#"
@@ -454,7 +454,7 @@ into a more traditional offline account.
 
       <section id="" about="http://purl.org/commerce#"
         typeof="owl:">
-        <h3>percentage (REMOVED, was: ps:percentage)</h3>
+        <h3>percentage (NOT IMPLEMENTED, but should be, was: ps:percentage)</h3>
       </section>
 
       <section id="" about="http://purl.org/commerce#"
@@ -464,7 +464,7 @@ into a more traditional offline account.
 
       <section id="" about="http://purl.org/commerce#"
         typeof="owl:">
-        <h3>transfer (REMOVED, but should not be, was ps:transfer)</h3>
+        <h3>transfer (NOT IMPLEMENTED, but should be, was ps:transfer)</h3>
       </section>
 
       <section id="" about="http://purl.org/commerce#"
