--- a/specs/source/vocabs/signature.html
+++ b/specs/source/vocabs/signature.html
@@ -123,15 +123,15 @@
       </section>
       <section id="" about="http://purl.org/signature#"
         typeof="owl:">
-        <h3>signatureAlgorithm (REMOVED, was ps:signatureAlgorithm)</h3>
+        <h3>signatureAlgorithm (NOT IMPLEMENTED, was ps:signatureAlgorithm)</h3>
       </section>
       <section id="" about="http://purl.org/signature#"
         typeof="owl:">
-        <h3>signatureHashAlgorithm (REMOVED, was ps:signatureHashAlgorithm)</h3>
+        <h3>signatureHashAlgorithm (NOT IMPLEMENTED, was ps:signatureHashAlgorithm)</h3>
       </section>
       <section id="" about="http://purl.org/signature#"
         typeof="owl:">
-        <h3>signatureSerializationAlgorithm (REMOVED, was ps:signatureSerializationAlgorithm)</h3>
+        <h3>signatureSerializationAlgorithm (NOT IMPLEMENTED, was ps:signatureSerializationAlgorithm)</h3>
       </section>
       <section id="" about="http://purl.org/signature#"
         typeof="owl:">
